# AquaEngine

./: .gitignore  .gitmodules  API_8hpp_source.html  CMakeLists.txt  LICENSE  Scene_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  dir_3e2454c2c70bd446471d372e5b65f843.html  dir_5baf679cf4943df8904dce5d41d4d3dc.html  dir_c12a6f5e6b887c62c6a89daa412fe214.html  dir_c12a6f5e6b887c62c6a89daa412fe214.js  dir_c24b5129bf9d6365af440b816fcfbe82.html  dir_c24b5129bf9d6365af440b816fcfbe82.js  dir_c6310732a22f63c0c2fc5595561e68f1.html  dir_c6310732a22f63c0c2fc5595561e68f1.js  files.html  index.html  md_Docs_Markdown_Installation.html  navtreedata.js  navtreeindex0.js  pages.html  structAquaEngine_1_1Scene-members.html  structAquaEngine_1_1Scene.html
.github/workflows/: base-game.yml  build.yml  documentation.yml  editor.yml
Apps/: CMakeLists.txt
Apps/BaseGame/: CMakeLists.txt
Apps/BaseGame/Include/: BaseGame.hpp
Apps/BaseGame/Source/: BaseGame.cpp  main.cpp
Apps/Common/Include/BGFXEntry/: common.h
Apps/Common/Source/BGFXEntry/: bgfx_utils.cpp  entry_windows.cpp  entry_x11.cpp
Apps/Editor/: CMakeLists.txt
Apps/Editor/Source/: main.cpp
BaseGame/: CMakeLists.txt
BaseGame/Source/: main.cpp
CMake/: Logo.ai
CMake/Mac/: AquaIcon.icns
CMake/Windows/: AppIcon.rc
CMakeModules/: GitInfo.cmake
Core/: CMakeLists.txt
Core/Include/AquaEngine/: API.hpp
Docs/: Doxyfile
Docs/Markdown/: Installation.md
Editor/: CMakeLists.txt
Editor/Source/: main.cpp
Engine/: CMakeLists.txt
Engine/Include/AquaEngine/: API.hpp  Scene.hpp
Engine/Source/: Scene.cpp
search/: classes_0.js  pages_0.js  searchdata.js
